[package]
name = "sparse_matrix_rust_to_python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version= "*", features = ["extension-module"] }
sprs = "0.11.0"
numpy = "0.17.1"